--- a/src/main/resources/static/user/common/css/common.css
+++ b/src/main/resources/static/user/common/css/common.css
@@ -16,7 +16,7 @@
 #top-btn {
     position: fixed;
     bottom: 270px;
-    right: 100px;
+    right: 80px;
     width: 50px;
     height: 50px;
     border-radius: 100%;
@@ -26,6 +26,7 @@
     box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.1);
     background-color: #fff;
     cursor: pointer;
+    display: none;
     opacity: 0;
     transition: all 0.3s;
     transform: translateY(30px);
@@ -44,6 +45,7 @@
 }
 
 body.scrolling #top-btn {
+    display: block;
     opacity: 1;
     transform: translateY(0);
 }
