--- a/src/main/resources/static/user/products/css/detail.css
+++ b/src/main/resources/static/user/products/css/detail.css
@@ -24,7 +24,7 @@
 .book-info-text {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 50px;
 }
 
 .book-title {
@@ -272,7 +272,6 @@
     width: 100%;
     height: 155px;
     padding: 10px 20px;
-    /*border-top: 1px solid #C0C0C0;*/
     border-bottom: 1px solid #C0C0C0;
 }
 
@@ -303,6 +302,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 10px;
 }
 
 .user-wrap {
