--- a/src/main/resources/templates/user/main/customer_order/payment.html
+++ b/src/main/resources/templates/user/main/customer_order/payment.html
@@ -8,9 +8,166 @@
 <link rel="stylesheet" href="/user/customer_order/css/payment.css">
 
 <div class="inner">
-    <h3>주문/결제</h3>
+    <!-- 상단 제목 -->
+    <section id="pay-header">
+        <h3 class="header-title">주문/결제</h3>
+        <div class="order-process">
+            <p>장바구니</p>
+            <img src="/user/customer_order/img/arrow-right=off.svg" alt="화살표">
+            <p class="bold">결제하기</p>
+            <img src="/user/customer_order/img/arrow-right=on.svg" alt="화살표">
+            <p>주문완료</p>
+        </div>
+    </section>
+    <div id="payment-section">
+        <!-- 배송지정보 -->
+        <section id="deliver-info">
+            <div class="addr-info">
+                <p class="sub-title">배송지 정보</p>
+                <div class="user-info">
+                    <p>홍길동</p>
+                    <p>전화번호</p>
+                    <div class="addr-wrap">
+                        <p>주소</p>
+                        <button class="default-btn border" id="edit-btn">변경</button>
+                    </div>
+                </div>
+            </div>
+            <div class="select-enter-way">
+                <p class="sub-title">공동현관 출입방법</p>
+                <div class="door-info">
+                    <div class="radio-wrap">
+                        <div class="common-door">
+                            <input type="radio" name="door-way" id="door-pw" checked>
+                            <label for="door-pw">공동현관 비밀번호</label>
+                        </div>
+                        <div class="free-door">
+                            <input type="radio" name="door-way" id="door-free">
+                            <label for="door-free">자유출입 가능</label>
+                        </div>
+                    </div>
+                    <div class="input-wrap">
+                        <input type="text" name="common_ent_pw" id="common_ent_pw"
+                               placeholder="정확한 공동현관 출입번호(비밀번호)를 입력해주세요.">
+                        <p>※ 공동현관 출입방법 정보가 정확하지 않을 경우, 새벽배송 시 공동현관 앞에 배송되거나 반송될 수 있습니다.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 주소변경모달 -->
+            <div id="edit-addr-modal">
+                <div class="modal-head">
+                    <h3>배송지 수정</h3>
+                    <i class="fa-solid fa-xmark" id="close-btn"></i>
+                </div>
+                <div class="addr-edit-wrap">
+                    <div class="edit-input person-name">
+                        <p class="edit-subtitle">받는 분</p>
+                        <input type="text" name="" id="" placeholder="이름">
+                    </div>
+                    <div class="edit-input phone-number">
+                        <p class="edit-subtitle">전화번호</p>
+                        <input type="number" name="" id="" placeholder="전화번호">
+                    </div>
+                    <div class="edit-input change-addr">
+                        <p class="edit-subtitle">주소</p>
+                        <div class="search-addr">
+                            <div class="addr-top">
+                                <input type="text" name="order_addr" id="order_addr" disabled>
+                                <button class="default-btn" id="search-btn">검색</button>
+                            </div>
+                            <input type="text" name="order_addr_detail" id="order_addr_detail">
+                        </div>
+                    </div>
+                    <button class="default-btn" id="confirm-btn">확인</button>
+                </div>
+            </div>
+        </section>
+
+        <!-- 결제 정보 -->
+        <section id="pay-info">
+            <div class="top">
+                <div class="price-wrap">
+                    <p>상품금액</p>
+                    <div class="price">
+                        <p>20000</p>
+                        <p>원</p>
+                    </div>
+                </div>
+                <div class="deliver-fee">
+                    <p>배송비</p>
+                    <p>무료</p>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="total-wrap">
+                    <p>최종 결제 금액</p>
+                    <div class="price">
+                        <p>34000</p>
+                        <p>원</p>
+                    </div>
+                </div>
+                <button class="default-btn" id="pay-btn">결제하기</button>
+            </div>
+        </section>
+
+        <!-- 상품정보 -->
+        <section id="product-info">
+            <div class="product-head">
+                <div class="left">
+                    <p class="product-name">주문상품</p>
+                    <div class="total-cnt">
+                        <p>총</p>
+                        <p class="book-cnt">2</p>
+                        <p>개</p>
+                    </div>
+                </div>
+                <i class="fa-solid fa-angle-down product-info-arrow"></i>
+            </div>
+            <div class="product-list">
+                <!--                <img th:attr="src=${bookDetail.book_thumbnail_changed != null ? '/images/books/' + bookDetail.book_thumbnail_changed : '/images/books/noimg.png'}"-->
+                <!--                     alt="책사진">-->
+                <div class="list-left">
+                    <div class="img-wrap">
+                        <img src="/images/books/9791139220704.jpg" alt="책사진">
+                    </div>
+                    <p class="book-name">기억의 분식집</p>
+                </div>
+                <div class="list-right">
+                    <div class="books-cnt">
+                        <p>1</p>
+                        <p>개</p>
+                    </div>
+                    <div class="book-price">
+                        <p>18000</p>
+                        <p>원</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 결제 동의 -->
+        <section id="pay-agree">
+            <h3>위 주문내용을 확인하였으며, 결제에 동의합니다.</h3>
+            <div class="agree-content product">
+                <div class="agree-title">
+                    <p>주문 상품 정보 동의</p>
+                    <i class="fa-solid fa-angle-down agree-arrow"></i>
+                </div>
+                <div class="agree-text">
+                    주문할 상품의 상품명, 가격, 배송정보 등을 최종 확인하였으며, 구매에 동의하십니까? (전자상거래법 제 8조 2항)
+                </div>
+            </div>
+            <div class="agree-content private">
+                <div class="agree-title">
+                    <p>개인정보 수집 및 이용동의</p>
+                    <i class="fa-solid fa-angle-down agree-arrow"></i>
+                </div>
+                <div class="agree-text"></div>
+            </div>
+        </section>
+    </div>
 
 </div>
-<script src="/user/common/js/main.js"></script>
 <script src="/user/customer_order/js/payment.js"></script>
 </html>
