--- a/src/main/resources/static/user/common/css/common.css
+++ b/src/main/resources/static/user/common/css/common.css
@@ -16,7 +16,7 @@
 #top-btn {
     position: fixed;
     bottom: 270px;
-    right: 80px;
+    right: 20px;
     width: 50px;
     height: 50px;
     border-radius: 100%;
@@ -40,7 +40,7 @@
 
 @media (min-width: 1920px) {
     #top-btn {
-        right: 340px; /* 적절한 위치로 조정, 화면 크기에 따라 조정 가능 */
+        right: 240px;
     }
 }
 
@@ -57,7 +57,7 @@ button {
 }
 
 button:focus {
-    border: none;
+    /*border: none;*/
     outline: none;
 }
 
@@ -153,6 +153,10 @@ input[type='radio'] {
     border: 5px solid #c0c0c0; /* 체크되지 않았을 때의 테두리 색상 */
     border-radius: 50%;
     outline: none; /* focus 시에 나타나는 기본 스타일 제거 */
+    cursor: pointer;
+}
+
+input[type='radio'] + label {
     cursor: pointer;
 }
 
