--- a/src/main/resources/templates/user/login/login.html
+++ b/src/main/resources/templates/user/login/login.html
@@ -38,7 +38,7 @@
 		        </div>
 		        <div class="login-function">
 			        <div class="id-store">
-						<label class="radio"><input type="radio" />아이디 저장 ></label>
+						<label class="radio"><input type="radio" id="saveIdCheckbox"/>아이디 저장 ></label>
 						<label class="text"><a href="/user/members/find_Id">아이디 찾기</a>|<a href="/user/members/find_Pw">비밀번호 찾기</a></label>
 					</div>					
 				</div>
