Fix : id 저장 기능 로그인 성공시 저장되게끔 만약 checkbox 클릭 해제후 로그인시 저장된 아이디 삭제 처리

--- a/src/main/resources/templates/user/login/login.html
+++ b/src/main/resources/templates/user/login/login.html
@@ -38,8 +38,8 @@
 		        </div>
 		        <div class="login-function">
 			        <div class="id-store">
-						<label class="radio"><input type="radio" id="saveIdCheckbox"/>아이디 저장 ></label>
-						<label class="text"><a href="/user/members/find_Id">아이디 찾기</a>|<a href="/user/members/find_Pw">비밀번호 찾기</a></label>
+						<div class="check-bth"><input type="checkbox"  id="saveIdCheckbox" class="check-box" /><label for=""></label></div>아이디 저장 >
+						<label class="text"><a href="/user/members/find_Id" style="margin-left: 50px;">아이디 찾기</a>|<a href="/user/members/find_Pw">비밀번호 찾기</a></label>
 					</div>					
 				</div>
 				
