--- a/src/main/resources/static/user/common/css/header.css
+++ b/src/main/resources/static/user/common/css/header.css
@@ -253,32 +253,36 @@ nav.category-wrap {
     position: fixed;
 	left: 0;
     top: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
     width: 100%;
     height: 80px;
+    padding: 15px 0;
     background-color: #fff;
     box-shadow: -2px 0px 4px rgba(0, 0, 0, 0.25);
-    opacity: 0;
+    display: none;
     z-index: 10;
-    transition: opacity 0.2s;
 }
 
 .header-fixed.visible {
-    opacity: 1;
+    display: block;
 }
 
 .all-categories-icon {
     height: 44px;
 }
 
-.fixed-item-wrap {
+.header-left {
     display: flex;
     align-items: center;
-    padding: 0px 55px;
     gap: 30px;
+}
+
+.fixed-item-wrap {
+    width: 1280px;
+    margin: 0 auto;
+    padding: 0 55px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .header-fixed-logo-img {
@@ -291,9 +295,8 @@ nav.category-wrap {
 
 .header-fixed-right {
     display: flex;
-    gap: 24px;
-    margin-left: 80px;
     align-items: center;
+    gap: 24px;
 }
 
 .fixed-modal {
