--- a/src/main/resources/static/user/customer_order/css/payment.css
+++ b/src/main/resources/static/user/customer_order/css/payment.css
@@ -34,7 +34,7 @@
     padding: 40px 50px;
     border: 1px solid #C0C0C0;
     border-radius: 10px;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 #deliver-info .sub-title {
@@ -158,6 +158,11 @@
     width: 240px;
     height: 50px;
 }
+
+#pay-btn:disabled {
+    background-color: #7E7E7E;
+}
+
 
 /* 결제 상품 정보 */
 .product-head {
@@ -288,7 +293,7 @@
     padding: 25px 20px;
     background: #FFFFFF;
     border: 1px solid #7E7E7E;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
 }
 
@@ -302,6 +307,7 @@
 
 #edit-addr-modal #confirm-btn {
     align-self: center;
+    margin-top: 10px;
 }
 
 .addr-edit-wrap {
@@ -320,6 +326,7 @@
     padding: 10px;
     border: 1px solid #c0c0c0;
     border-radius: 5px;
+    font-size: 16px;
 }
 
 .addr-input-box { width: 100%; }
@@ -366,4 +373,9 @@
 #edit-addr-modal #close-btn {
     font-size: 30px;
     cursor: pointer;
+}
+
+.result-wrap {
+    border: 1px solid #c0c0c0;
+    border-radius: 0 0 10px 10px;
 }
