Refactor : 마이페이지 리뷰 수정

--- a/src/main/resources/templates/user/mypage/review/myReview.html
+++ b/src/main/resources/templates/user/mypage/review/myReview.html
@@ -6,6 +6,7 @@
       layout:fragment="Content">
       
       <link rel="stylesheet" href="/user/mypage/css/review.css"/>
+      
 <div class="content">
 	
 	<div class="myinfo-content">
@@ -27,7 +28,7 @@
 			</div>
 	    </div>
 
-    	<div class="tab-btns-wrap" style="margin-bottom: 20px;">
+    	<div class="tab-btns-wrap">
 	        <button class="tab-btn active">리뷰를 기다리는 도서</button>
 	        <button class="tab-btn">내가 작성한 리뷰</button>
     	</div>
@@ -39,6 +40,7 @@
 	    
 	    <!-- #book-list 리스트 뽑아올 곳 -->
 		<div id="book-list"></div>
+		
 	</div>	    
 </div>
 	<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
