--- a/src/main/resources/templates/user/mypage/review/writeReview.html
+++ b/src/main/resources/templates/user/mypage/review/writeReview.html
@@ -13,7 +13,7 @@
 		<p class="myinfo-title">리뷰 작성</p>
 	
 		<form action="/user/mypage/save-review" method="post">
-			<input type="hidden" name="orderDetailNum" th:value="${userBookReviewDTO.order_detail_num}">
+			<input type="hidden" th:name="order_detail_num" th:value="${userBookReviewDTO.order_detail_num}">
 		  	<div class="write-container">
 		   		<div class="write-book-info">
 					<img th:src="@{'/images/books/' + ${userBookReviewDTO.book_isbn} + '.jpg'}" alt="책 이미지">
@@ -31,12 +31,12 @@
 			        <i class="star fas fa-star" data-rating="5"></i>
 			        <span class="rating-value" style="display: block; text-align: center">5/5</span>
 		      	</div>
-		   		<input type="hidden" name="reviewRating" value="0">
+		   		<input type="hidden" th:name="review_rating" value="5">
 		   	</div>
 		   
 			<div class="write-review-container">
 				<span class="important">리뷰 작성</span>
-				<textarea name="reviewContent" rows="4" cols="50" maxlength="1000" placeholder="내용을 10자 이상 입력해 주세요. 주제와 무관한 리뷰, 악플, 배송문의 등의 글은 임의 삭제될 수 있습니다." required></textarea>
+				<textarea th:name="review_content" rows="4" cols="50" maxlength="1000" placeholder="내용을 10자 이상 입력해 주세요. 주제와 무관한 리뷰, 악플, 배송문의 등의 글은 임의 삭제될 수 있습니다." required></textarea>
 				<p class="char-count">
 					<span id="charCount">0</span><span>/1000</span>
 				</p>
